<resources>
    <string name="app_name">Agr Buy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="google_maps_key">AIzaSyDsdLGGOuNZfPoduvIljmRS8aKOlNthp5o</string>

    <string name="action_settings">Settings</string>
    <string name="dots">M16,12A2,2 0,0 1,18 10A2,2 0,0 1,20 12A2,2 0,0 1,18 14A2,2 0,0 1,16 12M10,12A2,2 0,0 1,12 10A2,2 0,0 1,14 12A2,2 0,0 1,12 14A2,2 0,0 1,10 12M4,12A2,2 0,0 1,6 10A2,2 0,0 1,8 12A2,2 0,0 1,6 14A2,2 0,0 1,4 12Z</string>
    <string name="my_custom">M38.73,25.82v-4.09l3.94,-2.18L21.34,8.15L0,19.55l8.51,4.94v2.91v0.23c0.02,-0.01 0.05,-0.02 0.08,-0.04c-0.09,0.13 -0.15,0.25 -0.15,0.38c0,1.43 5.77,2.59 12.9,2.59c7.13,0 12.91,-1.16 12.91,-2.59c0,-0.13 -0.06,-0.25 -0.15,-0.38c0.03,0.01 0.05,0.02 0.08,0.04v-0.23v-2.92l3.71,-2.28v3.62c-0.41,0.17 -0.69,0.57 -0.69,1.03c0,0.62 0.5,1.12 1.11,1.12c0.62,0 1.12,-0.5 1.12,-1.12C39.42,26.38 39.14,25.98 38.73,25.82zM21.34,29.57c-6.33,0 -11.45,-0.72 -11.45,-1.61s5.13,-1.61 11.45,-1.61c6.32,0 11.45,0.72 11.45,1.61S27.66,29.57 21.34,29.57zM33.89,22.1c-0.85,-0.91 -3.91,-3.3 -12.55,-3.3c-8.65,0 -11.7,2.39 -12.55,3.3v-0.86c0,0 2.48,-3.72 12.55,-3.72c10.07,0 12.55,3.72 12.55,3.72V22.1z</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="news"><![CDATA[News & Events]]></string>
    <string name="dot">.</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>




    <string name="title_activity_main">Transport Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="enter_transport_id">Enter transport ID</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string
        name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string name="missing_inputs">Please enter a transport ID, email and password</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="ok">OK</string>
    <string name="enable">Enable</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="confirm_stop">Do you really want to disable location tracking?</string>

    <string name="firebase_path" translatable="false">raw-locations/</string>
    <string name="prefs" translatable="false">prefs</string>
    <string name="transport_id" translatable="false">transport_id</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="geofence_not_available">geofence_not_available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="unknown_geofence_error">unknown_geofence_error</string>
    <string name="geofence_transition_notification_text">geofence_transition_notification_text</string>
    <string name="geofence_transition_entered">geofence_transition_entered</string>
    <string name="geofence_transition_exited">geofence_transition_exited</string>
    <string name="unknown_geofence_transition">unknown_geofence_transition</string>
    <string name="geofence_transition_invalid_type">geofence_transition_invalid_type</string>
    <string name="loading...">Loading</string>
    <string name="noaccount"><font color="#F2ffffff">Don\'t have an account?</font> <font color="#FFfefefe"><b>SignUp</b></font></string>
    <string name="haveaccount"><font color="#F2ffffff">Already have an account?</font> <font color="#FFfefefe"><b>Login</b></font></string>
    <string name="content_image">Image</string>
    <string name="post_title">Title</string>
    <string name="post_desc">Description</string>
    <string name="post_username">Username</string>
    <string name="loading">Loading....</string>
    <string name="ADMOB_APP_ID">ca-app-pub-1274417271921292~1543201835</string>


    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="feedback">Feedback</string>
    <string name="account_settings">Account Settings</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Aboutus">About Us</string>
    <string name="aboutus_content"><![CDATA[Malla Reddy Engineering College (MREC) was started in the year 2002 under the Chairmanship of Sri.Ch. Malla Reddy, M.P, who has vast experience in providing high quality technical education, on par with premier Institutions like NITs and IITs in the country. MREC was started with the approval of AICTE, New Delhi and is affiliated to JNTUH, Hyderabad. The college is situated in a serene, lush green environment on Kompally- Bahadhurpally Road, opposite to Forest academy, R.R.District, Telangana State.   MREC is now an accreditated institution by NAAC with ‘A’ Grade. The Institution has high quality infrastructure and well equipped laboratories in all departments. The college achieved autonomous status under JNTUH w.e.f 2011-12 and also conferment of autonomous status by UGC from 2014-15 for a period of 6 years. MREC Professional Education forms the first and foremost foundation for the students to achieve higher goals in life and covering various streams of Engineering & Technology and Management.   Dr.S.Sudhakara Reddy is the Principal of MREC, with rich teaching and industrial experience of almost three decades.]]></string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="buffering">Buffering</string>
    <string name="now_playing">Now Playing</string>
    <string name="radio">Radio</string>
    <string name="collage_radio">College Radio</string>

    <string name="quantity_prompt">Choose Quantity</string>
    <string name="Rice">Rice</string>
    <string name="toor_dal">Toor Dal</string>
    <string name="wheat">Wheat</string>
    <string name="rajam">Rajam</string>
    <string name="choole">Choole</string>
    <string name="matar">Matar</string>
    <string name="large_text">hi</string>
    <string name="frequency">Frequency</string>
    <string name="choose">Choose Frequency</string>
    <string-array name="tons">
        <item>Select Quantity</item>
        <item>1 Ton</item>
        <item>2 Ton</item>
        <item>5 Ton</item>
        <item>10 Ton</item>
    </string-array>
    <string-array name="frequency">
        <item>Choose Frequency</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half Yearly</item>
        <item>Yearly</item>ha
    </string-array>


</resources>
