<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Order"
            android:icon="@drawable/ic_chatting"
            android:title="Orders" />
        <!--<item-->
            <!--android:id="@+id/nav_Assignments"-->
            <!--android:icon="@drawable/ic_icon"-->
            <!--android:title="Assignments" />-->
        <!--<item-->
            <!--android:id="@+id/nav_News"-->
            <!--android:icon="@drawable/ic_text_lines"-->
            <!--android:title="@string/news" />-->

        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/account_settings" />
        <!--<item-->
            <!--android:id="@+id/nav_message"-->
            <!--android:icon="@drawable/ic_chatting"-->
            <!--android:title="Chat" />-->

        <item
            android:id="@+id/nav_Aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/Aboutus" />
        <item
            android:id="@+id/nav_Contactus"
            android:icon="@drawable/ic_contactus"
            android:title="@string/ContactUs" />
    </group>
</menu>
